Fixing tools section on mobile screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3053,6 +3053,10 @@ body {
 
 		.tools-grid {
 			grid-template-columns: repeat(3, 1fr);
+			gap: 3rem 3rem;
+			flex: 1 1 auto;
+			margin-right: 0px;
+			margin-top: 30px;
 		}
 		}
 
